--- a/tictactoe/stylesheet.css
+++ b/tictactoe/stylesheet.css
@@ -1,4 +1,7 @@
 #board td {
+  font-family: helvetica;
+  font-size: 60px;
+  text-align: center;
   background-color: #e3e3e3;
   width: 150px;
   height: 150px;
